# test

./: .gitignore  Excercise3.md  Exercise1_4.md  Exercise2.md  Exercise5.md
rag/: .dockerignore  Dockerfile  Dockerfile-CUDA  __init__.py  api.py  demo.py  pyproject.toml  rag_core_api.py
rag/core/: __init__.py  chunker.py  indexer.py  ingestion.py  pipeline.py  retriever.py  utils.py
rag/src/rag_core/: __init__.py  chunker.py  indexer.py  ingestion.py  pipeline.py  prompt_template.py  retriever.py  schemas.py  utils.py
rag/tests/: conftest.py
react_agent/: __init__.py  agent.py  demo.py  pyproject.toml  schemas.py
react_agent/tools/: __init__.py  calculator.py  registry.py  web_search.py
